# workspace_colors

./: .gitignore  CLAUDE.md  README.md  check_contrast.py  color_picker.py  generate.py  pyproject.toml
.github/workflows/: publish.yml
color_picker/: README.md  __init__.py  __main__.py  base.py  cli.py  tui.py
color_variations/: generate.py
color_variations/admiral/: settings.json
color_variations/aegean/: settings.json
color_variations/agate/: settings.json
color_variations/aged_bronze/: settings.json
color_variations/aged_copper/: settings.json
color_variations/ale/: settings.json
color_variations/almond/: settings.json
color_variations/amber/: settings.json
color_variations/amethyst/: settings.json
color_variations/antique_gold/: settings.json
color_variations/apricot/: settings.json
color_variations/aqua/: settings.json
color_variations/aquamarine/: settings.json
color_variations/arctic/: settings.json
color_variations/artichoke/: settings.json
color_variations/ash/: settings.json
color_variations/asparagus/: settings.json
color_variations/aubergine/: settings.json
color_variations/auburn/: settings.json
color_variations/aurora/: settings.json
color_variations/autumn/: settings.json
color_variations/avocado/: settings.json
color_variations/azure/: settings.json
scripts/: capture_top.py  check_contrast.py  contrast_rows.py  generate_full_table.py  generate_histogram.py
test_workspace/: README.md
vscode-workspace-colors/: LICENSE  README.md  build.sh  package-lock.json  package.json
(+311 files in other folders)
